# itu-sdse-project

./: .gitignore  Makefile  README-ccds.md  README.md  pyproject.toml  requirements.txt
dagger/: pipeline.go
lead_conversion_prediction/: __init__.py  dataset.py  features.py  plots.py
lead_conversion_prediction/modeling/: predict.py  train.py
lead_conversion_prediction/utils/: storage.py
models/: lead_model_lr.pkl  lead_model_xgboost.json
notebooks/: .gitignore  main.ipynb  model_inference.py
notebooks/artifacts/: .gitignore  lead_model_lr.pkl
reports/: model_results.json
