[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lead_conversion_prediction"
version = "1.0.0"
description = "Predicts whether a signup becomes a customer or not"
authors = [
  { name = "Peter Iatsenia and Nicolas Lejeune" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["lead_conversion_prediction"]
include = ["pyproject.toml", "lead_conversion_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lead_conversion_prediction"]
force-sort-within-sections = true

